<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray100"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_main_save_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:text="@string/main_save_information"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_main_save_information"
        android:layout_below="@+id/txt_app_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/main_profile_image_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile_image" />

            <TextView
                android:id="@+id/txt_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_profile"
                tools:text="@string/main_user_name" />

            <Button
                android:id="@+id/btn_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_button_primary"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/main_edit_profile"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/btn_view_website"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_user_name" />

            <Button
                android:id="@+id/btn_view_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/background_button_secondary"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/main_view_website"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_edit_profile"
                app:layout_constraintTop_toTopOf="@+id/btn_edit_profile" />

            <TextView
                android:id="@+id/txt_skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/main_skills"
                android:textColor="@color/gray600"
                app:layout_constraintStart_toStartOf="@+id/gl_start"
                app:layout_constraintTop_toBottomOf="@+id/btn_edit_profile" />

            <CheckBox
                android:id="@+id/chb_android_development"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/main_android_development"
                app:layout_constraintStart_toStartOf="@+id/gl_start"
                app:layout_constraintTop_toBottomOf="@+id/txt_skills" />

            <CheckBox
                android:id="@+id/chb_ui_design"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_ui_design"
                app:layout_constraintStart_toStartOf="@+id/gl_start"
                app:layout_constraintTop_toBottomOf="@+id/chb_android_development" />

            <CheckBox
                android:id="@+id/chb_deep_learning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_deep_learning"
                app:layout_constraintStart_toStartOf="@+id/gl_start"
                app:layout_constraintTop_toBottomOf="@+id/chb_ui_design" />

            <TextView
                android:id="@+id/txt_province_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/main_province_city"
                android:textColor="@color/gray600"
                app:layout_constraintStart_toStartOf="@+id/gl_start"
                app:layout_constraintTop_toBottomOf="@+id/chb_deep_learning" />

            <RadioGroup
                android:id="@+id/rg_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@+id/gl_start"
                app:layout_constraintTop_toBottomOf="@+id/txt_province_city">

                <RadioButton
                    android:id="@+id/rbtn_gilan_rasht"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_gilan_rasht"
                    app:layout_constraintStart_toStartOf="@+id/gl_start"
                    app:layout_constraintTop_toBottomOf="@+id/txt_province_city" />

                <RadioButton
                    android:id="@+id/rbtn_tehran_tehran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_tehran_tehran"
                    app:layout_constraintStart_toStartOf="@+id/gl_start"
                    app:layout_constraintTop_toBottomOf="@+id/rbtn_gilan_rasht" />

                <RadioButton
                    android:id="@+id/rbtn_alborz_karaj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_alborz_karaj"
                    app:layout_constraintStart_toStartOf="@+id/gl_start"
                    app:layout_constraintTop_toBottomOf="@+id/rbtn_tehran_tehran" />
            </RadioGroup>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>